[gd_scene load_steps=6 format=3 uid="uid://xseu36qbixsb"]

[ext_resource type="Script" uid="uid://u8g80ymgwcp4" path="res://src/scenes/MapMaker/AreaDefiner/area_maker.gd" id="1_wqt65"]
[ext_resource type="Script" uid="uid://ck6do5xda2rxu" path="res://src/scenes/MapMaker/AreaDefiner/change_bg_image.gd" id="2_agvtm"]
[ext_resource type="Texture2D" uid="uid://chpympjbsbdqf" path="res://assets/textures/ui_icons/ef_mt.png" id="3_oexlg"]
[ext_resource type="Script" uid="uid://d1bo5kshifflh" path="res://src/scenes/MapMaker/AreaDefiner/new_area_link.gd" id="4_nct1h"]
[ext_resource type="Script" uid="uid://c5jc7hq5gi2od" path="res://src/scenes/MapMaker/AreaDefiner/AddItemToArea.gd" id="5_agvtm"]

[node name="Area" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_wqt65")

[node name="AreaBG" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -10
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="AreaNameInput" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280.59, 44.485)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Area Name..."

[node name="ChangeBgImage" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Change BG Image"
script = ExtResource("2_agvtm")

[node name="BgPreview" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 173.325)
layout_mode = 2
texture = ExtResource("3_oexlg")
expand_mode = 2

[node name="LinkSection" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewAreaLink" type="Button" parent="HBoxContainer/LinkSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Link to another area"
script = ExtResource("4_nct1h")

[node name="AddedLinks" type="ScrollContainer" parent="HBoxContainer/LinkSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="LinkContainer" type="VBoxContainer" parent="HBoxContainer/LinkSection/AddedLinks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TagSection" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddTag" type="Button" parent="HBoxContainer/TagSection"]
layout_mode = 2
text = "Add area tag"

[node name="AddedTags" type="ScrollContainer" parent="HBoxContainer/TagSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="TagContainer" type="VBoxContainer" parent="HBoxContainer/TagSection/AddedTags"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemSection" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddItem" type="Button" parent="HBoxContainer/ItemSection"]
layout_mode = 2
text = "Add area items"
script = ExtResource("5_agvtm")

[node name="AddedItems" type="ScrollContainer" parent="HBoxContainer/ItemSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemContainer" type="VBoxContainer" parent="HBoxContainer/ItemSection/AddedItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="update_map" from="." to="." method="_on_update_map"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/AreaNameInput" to="." method="_on_area_name_input_text_changed"]
[connection signal="background_passer" from="HBoxContainer/VBoxContainer/ChangeBgImage" to="." method="_on_change_bg_image_background_passer"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ChangeBgImage" to="HBoxContainer/VBoxContainer/ChangeBgImage" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/LinkSection/NewAreaLink" to="HBoxContainer/LinkSection/NewAreaLink" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemSection/AddItem" to="HBoxContainer/ItemSection/AddItem" method="_on_pressed"]
[connection signal="update_item" from="HBoxContainer/ItemSection/AddItem" to="." method="_on_add_item_update_item"]
